# NanodbcSqlTest

./: CMakeLists.txt  conanfile.txt  main.cpp
